Fixed navbar overlap for web

--- a/capstone/src/Styles/CreateRecipes.css
+++ b/capstone/src/Styles/CreateRecipes.css
@@ -5,7 +5,19 @@
     width: 100%;
     height: 50px;
 }
-/* padding to fix navbar overlap issue */
-#nav-padding {
-    margin-bottom: 40px;
+/* Web Page Styles */
+@media (min-width: 769px) {
+    #title {
+    display: flex;
+    align-items: flex-end; 
+    height: 80px; 
+    padding: 10px;
+    }
+}
+/* Mobile Page Styles */
+@media (max-width: 768px) {
+    /* padding to fix navbar overlap issue */
+    #nav-padding {
+        margin-bottom: 40px;
+    }
 }
