--- a/capstone/src/Styles/RecipeModifier.css
+++ b/capstone/src/Styles/RecipeModifier.css
@@ -7,10 +7,9 @@
     border-radius: 4px;
     text-align: center;
 }
-#recipe_modifier_popup, #recipe_modifier_selection{
+#recipe_modifier_popup, #recipe_modifier_selection {
     margin-left: .5em;
     margin-right: .5em;
-    margin-bottom: 75px;
 }
 
 /* consistent button styling */
@@ -24,3 +23,18 @@
 .page-container {
     padding: 0.5em;
 } 
+/* Web Page Styles */
+@media (min-width: 769px) {
+    #title {
+    display: flex;
+    align-items: flex-end; 
+    height: 80px; 
+    padding: 10px;
+    }
+}
+/* Mobile Page Styles */
+@media (max-width: 768px) {
+    #recipe_modifier_popup, #recipe_modifier_selection {
+        margin-bottom: 75px;
+    }
+}
